# Autonomous_Vehicle

./: .gitignore
.claude/: CLAUDE.md
.claude/commands/: test.md
.claude/plans/: brain-architecture-phased.md
Brain/: CMakeLists.txt
Brain/config/: control.yaml  planning.yaml
Brain/control/: CMakeLists.txt
Brain/control/app/: control_node.cpp
Brain/control/include/control/: lateral_controller.hpp  speed_controller.hpp
Brain/control/manual_control/: CMakeLists.txt  MANUAL_CONTROL.md
Brain/control/manual_control/app/: manual_node.cpp
Brain/control/src/: lateral_controller.cpp  speed_controller.cpp
Brain/demo/: CMakeLists.txt
Brain/demo/C_demo/: CMakeLists.txt  demo.md  pub_demo.c  shm_pub_demo.c  sub_demo.c
Brain/demo/Cpp_demo/: CMakeLists.txt  cpp_demo.md  pub_demo.cpp  sub_demo.cpp
Brain/demo/Python_demo/: pub_demo.py
Brain/io/: io.md
Brain/io/camera/: CMakeLists.txt
Brain/io/camera/app/: camera_node.cpp
Brain/io/camera_sim/: CMakeLists.txt
Brain/io/camera_sim/app/: camera_sim_node.cpp
Brain/io/manual_control/app/: manual_node.cpp
Brain/io/serial/: CMakeLists.txt
Brain/io/serial/app/: serial_node.c
Brain/io/serial/include/serial/: protocol.h  serial.h
Brain/io/serial/src/: protocol.c  serial.c
Brain/io/serial_bridge/: CMakeLists.txt
Brain/io/serial_bridge/app/: serial_node.cpp
Brain/io/serial_bridge/include/serial/: protocol.hpp  serial_reader.hpp  serial_writer.hpp
Brain/io/serial_bridge/src/: protocol.cpp  serial_reader.cpp  serial_writer.cpp
Brain/launch/: run_lane_follow_sim.sh  run_manual.sh
Brain/libipc/: CMakeLists.txt  LIBIPC.md
Brain/libipc/bindings/cpp/include/ipc/: bus.hpp  ipc.hpp
Brain/libipc/bindings/python/: ipc.py  ipc_schema.py
Brain/libipc/include/ipc/: bus.h  ipc.h  mq.h  shm.h  topic.h
Brain/libipc/src/: bus.c  ipc.c  mq.c  mq_transport.c  mq_transport.h  shm.c  shm.h  topic.c
Brain/messages/: CMakeLists.txt  behavior_cmd.h  behaviour_cmd.h  camera_frame.h  control_cmd.h  ego_state.h  imu_state.h  lane_state.h  location.h  message.h  object_state.h  pose2d.h  serial_data.h  wheel_odom.h
Brain/perception/camera_sim/app/: camera_sim_node.cpp
Brain/perception/lane/: CMakeLists.txt  LANE.md
Brain/perception/lane/app/: lane_node.cpp
Brain/perception/lane/include/lane/: lane_detector.hpp  lane_tracker.hpp  preprocessing.hpp
Brain/perception/lane/src/: lane_detector.cpp  lane_tracker.cpp  preprocessing.cpp
Brain/perception/state/: CMakeLists.txt
Brain/perception/state/app/: state_node.cpp
Brain/perception/state/include/state/: state_estimator.hpp
Brain/perception/state/src/: state_estimator.cpp
Brain/planning/: CMakeLists.txt
Brain/planning/app/: planning_node.cpp
Brain/planning/include/planning/: behavior_manager.hpp
Brain/planning/src/: behavior_manager.cpp
Brain/setup/camera/: logicam.md
Brain/setup/connect/: ssh.md
Brain/test/: CMakeLists.txt
Brain/test/C_test/: CMakeLists.txt  pub_test.c  shm_sub_test.c
Brain/test/Cpp_test/: CMakeLists.txt  shm_pub_test.cpp  shm_sub_test.cpp  sub_test.cpp
Brain/test/Python_test/: python_test.md  sub_test.py
Documentation/: .gitignore  General_Architecture.drawio
Documentation/source/: cmake-huong-dan-chi-tiet.md
Documentation/source/Architecture/: architecture.dwg  architecture.html
Documentation/source/full_report/: .gitignore  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  report_demo.md
Documentation/source/track/: TRACK_TEST.dwg
Embedded Platform/: .gitignore
Embedded Platform/BFMC_1/: .cproject  .project  BFMC_1.launch
Embedded Platform/BFMC_1/Debug/: BFMC_1.list  makefile  objects.list
Embedded Platform/BFMC_1/Inc/: main.h
Embedded Platform/BFMC_F411CEU/: .cproject  .project  BFMC_F411CEU.launch
Embedded Platform/BFMC_G0B1/: .cproject  .project  BFMC_G0B1.launch  STM32G0B1RETX_FLASH.ld  STM32G0B1RETX_RAM.ld
Embedded Platform/BFMC_Sensor_401/: .project  BFMC_Sensor_401.ioc
(+121 files in other folders)
